# CapstoneMealMapSimplified

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SESSION_STATUS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  self-score.yml
ai/week1-rag/: __init__.py  agent_config.py  agent_observability.py  agent_tools_v2.py  pydantic_agent.py  rules_corpus.py  structured_models.py
ai/week1-rag/cli/: week1-meal-query-agent.py
ai/week1-rag/evals/: __init__.py  ground_truth_handcrafted.json  llm_judge.py  offline_eval.py  retrieval_eval.py
backend/: __init__.py  main.py
backend/routers/: health.py  rag.py
backend/services/: corpus_manager.py
data/rag/: corpus_registry.json  router_config.json
data/rag/demo/: README.md  provenance_manifest.json
data/rag/demo/derived/: dri_table.json  (+2 more)
demo_ui/: app.py
docs/: agent-tools.md  architecture.md  bad-mood-review.md  deployment.md  evaluation-methodology.md  evaluation-results-baseline.md  ip-strategy.md  next-steps.md  problem-statement.md  retrieval-evaluation.md  self-audit.md  self-score-report.md  tuning_results.json  verification.md
docs/media/: README.md
fixtures/: mock_llm_responses.json
monitoring/: README.md  __init__.py  dashboard.py  feedback.py  logs_to_gt.py
notebooks/: 60_manual_evaluation.ipynb
scorer/: .gitignore  README.md  SCORER_COMMIT_SHA  TARGET_REPO_URL  run_self_score.sh
scripts/: ip_sweep.sh  seed_demo.py  tuning_experiments.py
src/mealmaster_ai/: __init__.py  rate_limiter.py
src/mealmaster_ai/data/: __init__.py  canonical_ingredients_sample.py  demo_user_profile.py
src/mealmaster_ai/nutrition/: __init__.py  recipe_nutrition.py
src/mealmaster_ai/rag/: __init__.py  chunking.py  config.py  evidence_gate.py  hybrid.py  models.py  pipeline.py  reranker.py  router.py  search.py
src/mealmaster_ai/validation/: __init__.py  input_guardrails.py  medical_boundary_sample.py  response_validator.py
tests/: conftest.py
tests/judge/: test_offline_eval.py
tests/streamlit/: test_demo_ui.py
tests/unit/: test_agent_tools.py  test_chunking.py  test_demo_user_profile.py  test_evidence_gate.py  test_input_guardrails.py  test_intent_classifier.py  test_pydantic_agent.py  test_rate_limiter.py  test_recipe_nutrition.py  test_response_validator.py  test_router.py  test_structured_models.py
(+9 files in other folders)
